# open-agent-workbench

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yaml  start-dev.ps1
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py  mock_data.py
backend/app/agents/: __init__.py
backend/app/agents/bank_statement/: __init__.py  service.py
backend/app/agents/document_diff/: __init__.py  service.py
backend/app/agents/regulations/: __init__.py  service.py
backend/app/api/: __init__.py  router.py
backend/app/api/endpoints/: __init__.py  bank_statement.py  document_diff.py  market.py  regulations.py
backend/app/core/: config.py
backend/app/platform/: __init__.py  audit.py  context.py  file_pipeline.py  model_gateway.py  ocr.py  parsers.py  queue.py  reporting.py  repository.py  storage.py
backend/app/services/: __init__.py  bank_statement_service.py  document_diff_service.py  market_service.py  regulations_service.py
config/: README.md  config.dev.toml  config.toml
docs/: backend-workflows.md  extension-points.md  public-scope.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: api.ts  styles.css  utils.ts
frontend/src/components/: AppHeader.vue  PageShell.vue
frontend/src/router/: index.ts
frontend/src/views/: BankProjectsView.vue  BankRecognitionView.vue  BankReportView.vue  DocumentDiffView.vue  MarketView.vue  RegulationsView.vue
